src/components/Home/index.scss
.home-container {
  display: flex;
  flex-direction: column;
  gap: 8vh;
  flex-wrap: wrap;
  width: 100%;
}

.greet-container {
  display: flex;
  gap: 30px;
  width: 100%;

  h1.text-title {
    color: #fff;
    font-size: 53px;
    font-family: 'Coolvetica';
    font-weight: 400;
    padding-top: 50px;
    padding-left: 100px;
  }

  .flat-button {
    position: relative;
    top: 260px;
    height: 20px;
    color: #ffd700;
    font-size: 13px;
    font-weight: 400;
    letter-spacing: 4px;
    font-family: sans-serif;
    text-decoration: none;
    padding: 10px 18px;
    border: 1px solid #ffd700;
    animation: fadeIn 1s 1.8s backwards;
    white-space: nowrap;

    &:hover {
      background: #ffd700;
      color: #333;
    }
  }

  .text-img {
    width: 80px;
    margin-bottom: -20px;
    margin-left: 20px;
    opacity: 0;
    height: auto;
    animation: rotateIn 1s linear both;
    animation-delay: 1.4s;
  }
}

.images-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  padding-top: 20px;
  padding-bottom: 20px;
}

.image-box {
  position: relative;
  flex: 1 1 20%;
  max-width: calc(20% - 20px);
  min-width: 200px;
  height: auto;
  min-height: 300px;
  max-height: 450px;
  overflow: hidden;
  border-radius: 10px;

  .portfolio-image {
    position: absolute;
    z-index: 2;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .content {
    position: absolute;
    width: 100%;
    z-index: 3;
    padding: 10px 20px;
    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
    background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.2) 0%,
      rgba(0, 0, 0, 1)
    );
    bottom: -70px;
  }

  .title {
    margin-bottom: 0;
    margin-top: 0;
    color: #fff;
    font-size: 24px;
    font-weight: 500;
    line-height: 24px;
  }

  .description {
    font-size: 14px;
    margin-bottom: 5px;
    color: #fff;
    font-weight: 700;
  }

  .btn {
    margin-top: 30px;
    margin-bottom: 10px;
    padding: 0 23px;
    height: 40px;
    line-height: 34px;
    border: 2px solid #ffd700;
    border-radius: 6px;
    font-size: 14px;
    color: #fff;
    background: transparent;
    text-transform: uppercase;
    font-weight: 700;
    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
    cursor: pointer;
  }

  .btn:hover {
    transform: translateY(-3px);
    background: #ffd700;
  }

  &:after {
    content: '';
    background: linear-gradient(180deg, #ffd700, #000);
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
    opacity: 0;
  }

  &:hover:after {
    opacity: 0.85;
  }

  &:hover .content {
    bottom: 0;
    background: transparent;
  }
}

@media screen and (max-width: 768px) {
  .home-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 100%;
  }

  .greet-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;

    h1.text-title {
      height: auto;
      margin-bottom: 0;
      padding-top: 0;
      padding-left: 0;
      font-size: 30px;
    }
    .flat-button {
      position: static;
      height: auto;
      margin-top: 1rem;
      margin-bottom: 1rem;
    }
  }

  .images-container {
    height: auto;
  }
}

